Added DenseNet arc

--- a/Prediction_Notebook.ipynb
+++ b/Prediction_Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "from keras.layers import Dense,Activation,Flatten,Dropout\n",
     "from keras.layers import Input, Conv2D,MaxPooling2D\n",
     "from keras.callbacks import ModelCheckpoint\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from keras.applications.densenet import DenseNet121"
    ]
   },
   {
@@ -18550,11 +18551,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " densenet121 (Functional)    (None, 7, 7, 1024)        7037504   \n",
+      "                                                                 \n",
+      " flatten_1 (Flatten)         (None, 50176)             0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 256)               12845312  \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 5)                 1285      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 19,884,101\n",
+      "Trainable params: 19,800,453\n",
+      "Non-trainable params: 83,648\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the DenseNet model\n",
+    "model3 = Sequential()\n",
+    "\n",
+    "# Add the DenseNet base model\n",
+    "base_model = DenseNet121(include_top=False, input_shape=(224, 224, 3))\n",
+    "model3.add(base_model)\n",
+    "\n",
+    "# Add additional layers\n",
+    "model3.add(Flatten())\n",
+    "model3.add(Dense(256, activation='relu'))\n",
+    "model3.add(Dropout(0.5))\n",
+    "model3.add(Dense(5, activation='sigmoid'))\n",
+    "\n",
+    "# Compile the model\n",
+    "model3.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Print the model summary\n",
+    "model3.summary()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "history=model3.fit(x_train,y_train,epochs=100,validation_split=0.2).history"
+   ]
   }
  ],
  "metadata": {
@@ -18573,7 +18635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
