--- a/Prediction_Notebook.ipynb
+++ b/Prediction_Notebook.ipynb
@@ -19401,18 +19401,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.models import model_from_json\n",
     "\n",
     "model_json = model2.to_json()\n",
-    "with open(\"model.json\", \"w\") as json_file:\n",
+    "with open(\"model2.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
     "\n",
-    "model2.save_weights(\"model.h5\")"
+    "model2.save_weights(\"model2.h5\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
